Фикс для совместимости со старыми версиями java.  (Вплоть до 11  версии)